--- a/src/dropdown.hbs
+++ b/src/dropdown.hbs
@@ -1,7 +1,14 @@
 <div class="dropdown__inner">
     {{#items}}
     <div class="dropdown__item">
-        <div class="name">{{lookup this ../prop}}</div>
+        {{#if ../avatars}}
+        <div class="thumb">
+            <img src="{{ thumb }}">
+        </div>
+        {{/if}}
+        <div class="name">{{ name }}</div>
+        <div class="sub">{{ sub }}</div>
+        <div class="clear"></div>
     </div>
     {{/items}}
     {{^items}}
