--- a/src/dropdown.styl
+++ b/src/dropdown.styl
@@ -7,10 +7,14 @@
   box-sizing border-box
   padding 2px
 
-  color rgba(0,0,0,.9)
+  color rgb(0,0,0)
   border 1px solid #c0cad5
   background #fff
 
+  font-family 'Lucida Grande', Arial, tahoma, verdana, sans-serif
+  font-size 12px
+  font-weight: normal;
+  font-smoothing: subpixel-antialiased;
 
 .dropdown__input
   z-index 1
@@ -46,8 +50,28 @@
   box-sizing border-box
   padding 4px 6px
   border-bottom 1px solid #c0cad5
-  height 30px
+  min-height 30px
   background white
   
   &.active
     background #f1f5f9
+
+  & .name
+    margin-bottom 4px
+    cursor pointer
+    line-height 1.167
+
+  & .sub
+    font-size 12px
+    color #777777
+    white-space nowrap
+    text-overflow ellipsis
+
+  & .thumb
+    margin-right: 8px
+    width 38px
+    height 36px
+    overflow hidden
+    float left
+    border-radius 2px
+
