--- a/src/templates/input.hbs
+++ b/src/templates/input.hbs
@@ -1,2 +1,2 @@
-<input class="dropdown__input" type="text" value="" placeholder="Введите текст, hbs">
+<input class="dropdown__input" type="text" value="" placeholder="Введите текст">
 <div class="clear"></div>
